fix(website): fixed image on homepage overlapping text on small screens

--- a/apps/website/blueprints/index/static/css/index.css
+++ b/apps/website/blueprints/index/static/css/index.css
@@ -6,8 +6,7 @@
 
 .intro-section {
   padding: 100px 0;
-  min-height: calc(100vh - var(--header-height));
-  max-height: calc(100vh - var(--header-height));
+  min-height: max(700px, calc(100vh - var(--header-height)));
 
   display: flex;
   /* align-items: center; */
